# viselfcheck

./: MQAG_EVALUATION_GUIDE.md  README.md  mqag_evaluation.py  run_mqag_evaluation.sh  run_mqag_pipeline.py
eval/: bert-score-eval.py  colab_notebook.ipynb  eval_all_methods.py  utils.py
tests/: conftest.py  test_all_methods.py
viselfcheck/: pyproject.toml
viselfcheck/src/viselfcheck/: __init__.py  base.py  service.py
viselfcheck/src/viselfcheck/config/: settings.py
viselfcheck/src/viselfcheck/methods/: __init__.py  bert_score.py  hybrid.py  mqag.py  ngram.py  nli.py  prompt.py
viselfcheck/src/viselfcheck/modeling/: modeling_mqag.py  modeling_ngram.py
viselfcheck/src/viselfcheck/utils/: utils.py
