[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viselfcheck"
version = "1.0.0"
description = "A unified interface for various self-checking methods to evaluate text consistency"
authors = [

]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8,<3.9"
keywords = ["nlp", "text-evaluation", "self-checking", "consistency", "bert-score", "nli", "vietnamese"]
classifiers = [
]

# All dependencies included for full functionality
dependencies = [
    "torch>=1.9.0",
    "transformers>=4.20.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "tqdm>=4.62.0",
    "typing-extensions>=4.0.0",
    "bert-score>=0.3.13",
    "underthesea>=1.3.0",
    "vncorenlp>=1.0.3",
    "py_vncorenlp>=0.1.0",
    "nltk>=3.7",
    "openai>=1.0.0",
    "groq>=0.4.0",
    "google-generativeai>=0.1.0rc1",
    "requests>=2.28.0",
    "backoff>=2.2.0",
    "scikit-learn>=1.0.0",
    "datasets>=2.0.0",
    "evaluate>=0.4.0",
    "python-dotenv>=1.0.0",
    "pytest>=7.0.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-html>=3.1.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "isort>=5.10.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

# Testing dependencies (can be installed separately)
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-html>=3.1.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/2Phuong5Nam4/DetectHallucination4VN"

[tool.setuptools.packages.find]
where = ["src"]

# Basic tool configurations
[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

